; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_x64.c_emit_cmovs.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_x64.c_emit_cmovs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"cmovs %x,%%%s\00", align 1
@regname = common dso_local global i32* null, align 8
@const_zero = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c" [zero]\0A\00", align 1
@const_one = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [8 x i8] c" [one]\0A\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@out = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @emit_cmovs(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = ptrtoint i32* %5 to i32
  %7 = load i32*, i32** @regname, align 8
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i32, i32* %7, i64 %9
  %11 = load i32, i32* %10, align 4
  %12 = call i32 (i8*, ...) @assem_debug(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %6, i32 %11)
  %13 = load i32*, i32** %3, align 8
  %14 = icmp eq i32* %13, @const_zero
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = call i32 (i8*, ...) @assem_debug(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  br label %25

17:                                               ; preds = %2
  %18 = load i32*, i32** %3, align 8
  %19 = icmp eq i32* %18, @const_one
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = call i32 (i8*, ...) @assem_debug(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  br label %24

22:                                               ; preds = %17
  %23 = call i32 (i8*, ...) @assem_debug(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  br label %24

24:                                               ; preds = %22, %20
  br label %25

25:                                               ; preds = %24, %15
  %26 = call i32 @output_byte(i32 15)
  %27 = call i32 @output_byte(i32 72)
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @output_modrm(i32 0, i32 5, i32 %28)
  %30 = load i32*, i32** %3, align 8
  %31 = ptrtoint i32* %30 to i32
  %32 = load i64, i64* @out, align 8
  %33 = trunc i64 %32 to i32
  %34 = sub nsw i32 %31, %33
  %35 = sub nsw i32 %34, 4
  %36 = call i32 @output_w32(i32 %35)
  ret void
}

declare dso_local i32 @assem_debug(i8*, ...) #1

declare dso_local i32 @output_byte(i32) #1

declare dso_local i32 @output_modrm(i32, i32, i32) #1

declare dso_local i32 @output_w32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
